fix(intro): gradient fix for Safari in dark mode

--- a/css/custom.css
+++ b/css/custom.css
@@ -153,14 +153,14 @@ nav ul li.lang-drop svg, nav ul li.theme-changer svg {
 }
 
 #gradient {
-    background-image: linear-gradient(rgba(255, 255, 255, 0), white);
+    background: linear-gradient(rgba(255, 255, 255, 0), white);
     height: 50px;
     z-index: 1000;
     position: relative;
 }
 
 body.dark #gradient {
-    background-image: linear-gradient(rgba(255, 255, 255, 0), #212121);
+    background: linear-gradient(rgba(33, 33, 33, 0), #212121);
 }
 
 canvas {
